--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,17 @@
 <mat-toolbar color="primary">
   <span>{{title}}</span>
+  <span fxFlex></span>
+  <button mat-icon-button
+  aria-label="Heroes List"
+  matTooltip="Heroes"
+  routerLink="/heroes">
+  <mat-icon>sports_martial_arts</mat-icon>
+  </button>
 </mat-toolbar>
 
 <div class= "content">
-  <app-heroes></app-heroes>
+  <router-outlet></router-outlet>
+  <p></p>
   <app-messages></app-messages>
 </div>
 
