--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,24 @@
 <mat-toolbar color="primary">
   <span>{{title}}</span>
   <span fxFlex></span>
+
+  <button mat-icon-button
+  aria-label="Dashboard"
+  matTooltip="Dashboard"
+  routerLink="/dashboard">
+  <mat-icon>dashboard</mat-icon>
+  </button>
+
   <button mat-icon-button
   aria-label="Heroes List"
   matTooltip="Heroes"
   routerLink="/heroes">
   <mat-icon>sports_martial_arts</mat-icon>
   </button>
+
 </mat-toolbar>
 
-<div class= "content">
+<div class= "content" fxlayoutGap = "12px">
   <router-outlet></router-outlet>
   <p></p>
   <app-messages></app-messages>
