--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -1,10 +1,18 @@
 <div *ngIf="hero">
-  <h2>{{hero.name | uppercase}} Details</h2>
-  <div><span>id: </span> {{hero.id}}</div>
-  <div><span>name: </span> {{hero.name}}</div>
+  <h1>{{hero.name | uppercase}} Details</h1>
+  <mat-card class= "full-width">
+    <mat-card-content class= "width">
+      <mat-form-field fxLayout ="column">
+        <mat-label>ID</mat-label>
+        <input matInput disabled value="{{hero.id}}"/>
+      </mat-form-field>
 
-  <div>
-    <label for = 'name'>hero name:</label>
-    <input id = 'name' [(ngModel)] = 'hero.name' placeholder='name' type = 'text'/>
-  </div>
+      <mat-form-field>
+        <mat-label>Hero Name</mat-label>
+        <input id ="name" matInput [(ngModel)] = 'hero.name' placeholder='Name' type = 'text'/>
+      </mat-form-field>
+    </mat-card-content>
+  </mat-card>
+  <p></p>
+  <button color="primary" mat-raised-button (click)= "goBack()" >Go back</button>
   </div>
