--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,12 +1,19 @@
 <h2>My Heroes</h2>
+<mat-table [dataSource]= "heroes">
+  <!-- id Definition -->
+  <ng-container matColumnDef="id">
+    <mat-header-cell *matHeaderCellDef> ID </mat-header-cell>
+    <mat-cell *matCellDef= "let row"> {{row.id}} </mat-cell>
+  </ng-container>
 
-<ul class= "heroes">
-  <li
-  *ngFor= "let hero of heroes"
-  [class.selected]= "hero === selectedHero"
-  (click)= "onSelect(hero)">
-  <span>{{ hero.id }}</span> {{hero.name}}
-  </li>
-</ul>
+  <!-- name Definition -->
+  <ng-container matColumnDef="name">
+    <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
+    <mat-cell *matCellDef= "let row"> {{row.name}} </mat-cell>
+  </ng-container>
 
-<app-hero-detail [hero]= "selectedHero" ></app-hero-detail>
+  <!-- Header and Row Declarations -->
+  <mat-header-row *matHeaderRowDef= "displayedColumns"></mat-header-row>
+  <mat-row *matRowDef= "let row; columns: displayedColumns"
+  routerLink="/heroes/{{row.id}}"></mat-row>
+</mat-table>
