--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -8,12 +8,12 @@
        {{ messageService.getMessages().length }} record(s)
       </mat-panel-description>
     </mat-expansion-panel-header>
-
-      <div *ngFor= "let message of messageService.getMessages()" >
-        {{ message }}
-      </div>
+      <mat-list>
+        <mat-list-item *ngFor= "let message of messageService.getMessages()">
+          {{ message }}
+        </mat-list-item>
+      </mat-list>
       <p></p>
         <button mat-raised-button color="primary" (click)="messageService.clear()" >Clear messages</button>
-
   </mat-expansion-panel>
 </mat-accordion>
