--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -6,6 +6,6 @@
     <mat-card-header>
       <mat-card-title>{{ hero.name }}</mat-card-title>
     </mat-card-header>
-    <img mat-card-image src= "{{hero.icon}}" alt="Photo of a Shiba Inu">
+    <img mat-card-image src= "{{hero.icon}}" alt="HERO">
   </mat-card>
 </div>
