Criando core module

--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,5 +1,5 @@
 <h2>My Heroes</h2>
-<mat-table [dataSource]= "heroes">
+<mat-table [dataSource]= "heroes" class="mat-elevation-z10">
   <!-- id Definition -->
   <ng-container matColumnDef="id">
     <mat-header-cell *matHeaderCellDef> ID </mat-header-cell>
