--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -2,7 +2,11 @@
 <!--ngfor: for: pega os heroes do component dashboard e passa para o hero: Heroes -->
 <div
   fxLayout = "row" fxLayoutGap = "12px" fxLayoutAlign = "space-between" fxLayout.xs="column">
-  <mat-card class= "pointer" *ngFor= "let hero of heroes" routerLink="/heroes/{{ hero.id }}">
+  <mat-card
+    class= "pointer"
+    *ngFor= "let hero of heroes"
+    routerLink="/heroes/{{ hero.id }}"
+    >
     <mat-card-header>
       <mat-card-title>{{ hero.name }}</mat-card-title>
     </mat-card-header>
